5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1834_1280.log
== TEST (2019-07-01 18:45:13) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if ((x == 'A') and (xtab>=0)):
		xtab = xtab-1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
    # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
    # Move personagem para BAIXO
	elif x == 'S':        
		ytab = ytab+1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:49:15) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab-1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
    # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
    # Move personagem para BAIXO
	elif x == 'S':        
		ytab = ytab+1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:16:18) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>shape(tabuleiro)[1]:
		xtab=xtab+0
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
		#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
			xtab=xtab+1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		#se tiver coluna
		if:
			xtab=xtab-1
    # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		#se tiver coluna
		if:
			ytab=xtab+1
    # Move personagem para BAIXO
	elif x == 'S':        
		ytab = ytab+1
		#se tiver coluna
		if:
			ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 32
    xtab=xtab+1
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:16:28) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>shape(tabuleiro)[1]:
		xtab=xtab+0
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
		#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab+1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		#se tiver coluna
		if:
			xtab=xtab-1
    # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		#se tiver coluna
		if:
			ytab=xtab+1
    # Move personagem para BAIXO
	elif x == 'S':        
		ytab = ytab+1
		#se tiver coluna
		if:
			ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 37
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:16:59) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>shape(tabuleiro)[1]:
		xtab=xtab+0
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
		#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab+1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		#se tiver coluna
		if tabuleiro[ytab,xtab] == 33:
			xtab=xtab-1
    # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		#se tiver coluna
		if tabuleiro[ytab,xtab] == 33:
			ytab=xtab+1
    # Move personagem para BAIXO
	elif x == 'S':        
		ytab = ytab+1
		#se tiver coluna
		if tabuleiro[ytab,xtab] == 33:
			ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:30:00) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
				#se tiver coluna
				if tabuleiro[ytab,xtab] == 33:
					xtab=xtab+1
	#verificar se posso me mover
	if xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab-1
	#verificar se posso me mover
	if ytab>0:
	# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=xtab+1
	#verificar se posso me mover
	if ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 30
    if tabuleiro[ytab,xtab] == 33:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:30:14) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
				#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab+1
	#verificar se posso me mover
	if xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab-1
	#verificar se posso me mover
	if ytab>0:
	# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=xtab+1
	#verificar se posso me mover
	if ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:32:04) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
				#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab+1
	#verificar se posso me mover
	if xtab<shape(tabuleiro)[0]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab-1
	#verificar se posso me mover
	if ytab>0:
	# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=xtab+1
	#verificar se posso me mover
	if ytab<shape(tabuleiro)[1]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:32:39) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
				#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[0]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab-1
	#verificar se posso me mover
	elif ytab>0:
	# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=xtab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[1]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:39:57) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
				#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab-1
	#verificar se posso me mover
	elif ytab>0:
	# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=xtab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:41:25) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
				#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab+1
	#verificar se posso me mover
	if xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab-1
	#verificar se posso me mover
	if ytab>0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=xtab+1
	#verificar se posso me mover
	if ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:42:21) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
				#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab+1
	#verificar se posso me mover
	if xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab-1
	#verificar se posso me mover
	if ytab>0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=xtab+1
	#verificar se posso me mover
	if ytab<shape(tabuleiro)[1]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:56:10) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
		elif tabuleiro[ytab,xtab] == 33:
			xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
		#se tiver coluna
		elif tabuleiro[ytab,xtab] == 33:
			xtab=xtab-1
	#verificar se posso me mover
	elif ytab>0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
		#se tiver coluna
		elif tabuleiro[ytab,xtab] == 33:
			ytab=xtab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
		#se tiver coluna
		elif tabuleiro[ytab,xtab] == 33:
			ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:56:27) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
		elif tabuleiro[ytab,xtab] == 33:
			xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
		#se tiver coluna
		elif tabuleiro[ytab,xtab] == 33:
			xtab=xtab-1
	#verificar se posso me mover
	elif ytab>0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
		#se tiver coluna
		elif tabuleiro[ytab,xtab] == 33:
			ytab=xtab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
		#se tiver coluna
		elif tabuleiro[ytab,xtab] == 33:
			ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- EXECUTION TIME:
1.04427
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  1
posicao y:  0
moedas:  1
life:  100
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  1
posicao y:  0
moedas:  1
life:  100
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  0
posicao y:  0
moedas:  1
life:  100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:57:20) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
		if tabuleiro[ytab,xtab] == 33:
			xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
		#se tiver coluna
		if tabuleiro[ytab,xtab] == 33:
			xtab=xtab-1
	#verificar se posso me mover
	elif ytab>0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
		#se tiver coluna
		if tabuleiro[ytab,xtab] == 33:
			ytab=xtab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
		#se tiver coluna
		if tabuleiro[ytab,xtab] == 33:
			ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:29:24) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				xtab=xtab-1
	#verificar se posso me mover
	elif ytab>0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=xtab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
			if tabuleiro[ytab,xtab] == 33:
				ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:33:03) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab-1
	#verificar se posso me mover
	elif ytab>0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=xtab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:33:17) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab-1
	#verificar se posso me mover
	elif ytab>0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=xtab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:34:08) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab-1
	#verificar se posso me mover
	elif ytab>0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=xtab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab+1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:35:30) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>=0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab-1
	#verificar se posso me mover
	elif ytab>=0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=xtab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:36:32) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab-1
	#verificar se posso me mover
	elif ytab>=0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=xtab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:36:58) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>=0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab-1
	#verificar se posso me mover
	elif ytab>=0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=xtab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- EXECUTION TIME:
0.927224
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1280/main.py", line 38, in <module>
    if tabuleiro[ytab,xtab] == 33:
IndexError: index 13 is out of bounds for axis 1 with size 13

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:37:59) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>=0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab-1
	#verificar se posso me mover
	elif ytab>=0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:39:06) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab+1
	#verificar se posso me mover
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab-1
	#verificar se posso me mover
	elif ytab>0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab+1
	#verificar se posso me mover
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:41:45) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab+1
	#verificar se posso me mover(coluna)
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab-1
	#verificar se posso me mover
	elif ytab>=0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab+1
	#verificar se posso me mover(linha)
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:42:06) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>=0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab+1
	#verificar se posso me mover(coluna)
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab-1
	#verificar se posso me mover
	elif ytab>0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab+1
	#verificar se posso me mover(linha)
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:42:21) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>=0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab+1
	#verificar se posso me mover(coluna)
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab-1
	#verificar se posso me mover
	elif ytab>=0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab+1
	#verificar se posso me mover(linha)
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:43:11) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab<0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab+1
	#verificar se posso me mover(coluna)
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		xtab=xtab-1
	#verificar se posso me mover
	elif ytab<0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab+1
	#verificar se posso me mover(linha)
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
	if tabuleiro[ytab,xtab] == 33:
		ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:44:51) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
		if tabuleiro[ytab,xtab] == 33:
			xtab=xtab+1
	#verificar se posso me mover(coluna)
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
		if tabuleiro[ytab,xtab] == 33:
			xtab=xtab-1
	#verificar se posso me mover
	elif ytab>=0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
		if tabuleiro[ytab,xtab] == 33:
			ytab=ytab+1
	#verificar se posso me mover(linha)
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
		if tabuleiro[ytab,xtab] == 33:
			ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:45:56) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
   #verificar se posso me mover
	if xtab>0:
		# Move personagem para ESQUERDA
		if x == 'A':
			xtab = xtab-1
			#se tiver coluna
	elif tabuleiro[ytab,xtab] == 33:
		xtab=xtab+1
	#verificar se posso me mover(coluna)
	elif xtab<shape(tabuleiro)[1]:
		# Move personagem para DIREITA
		if x == 'D':
			xtab = xtab+1
			#se tiver coluna
	elif tabuleiro[ytab,xtab] == 33:
		xtab=xtab-1
	#verificar se posso me mover
	elif ytab>=0:
		# Move personagem para CIMA
		if x == 'W':
			ytab = ytab-1
			#se tiver coluna
	elif tabuleiro[ytab,xtab] == 33:
		ytab=ytab+1
	#verificar se posso me mover(linha)
	elif ytab<shape(tabuleiro)[0]:
		# Move personagem para BAIXO
		if x == 'S':        
			ytab = ytab+1
			#se tiver coluna
	elif tabuleiro[ytab,xtab] == 33:
		ytab=ytab-1
    # Trata evento
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
       # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
